--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     padding: 0;
     margin:  0;
     box-sizing: border-box;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 /* Global styling */
@@ -115,6 +115,7 @@ body::before {
     height: 15rem;
     object-position: center;
     object-fit: cover;
+    display: block;
 }
 
 /* Seccion 1 */
