--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@ body::before {
     position: relative;
     transform: translateX(-100%);
     transition: transform .5s ease-in-out;
+    will-change: transform;
 }
 
 .hero-video {
@@ -543,7 +544,7 @@ body::before {
 
 .carousel-container {
     width: 100%;
-    height: 40rem;
+    height: 60rem;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -556,7 +557,7 @@ body::before {
   
 .carousel img {
     width: 100vw;
-    height: 40rem; /* Desktop */
+    height: 60rem;
     object-fit: cover;
     display: block;
     aspect-ratio: 16/9;
@@ -1308,7 +1309,7 @@ button:not([disabled]) {
 }
 
 .carousel img {
-    height: 25rem; /* Móvil */
+    height: 25rem;
     aspect-ratio: 3 / 1;
 }
 
